--- a/CerasUnityIssues.Unity/Packages/manifest.json
+++ b/CerasUnityIssues.Unity/Packages/manifest.json
@@ -8,6 +8,7 @@
     "com.unity.render-pipelines.high-definition": "5.7.2-preview",
     "com.unity.textmeshpro": "2.0.1",
     "com.unity.timeline": "1.0.0",
+    "de.nsynk.unity.glue": "file:../../de.nsynk.unity.glue",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
     "com.unity.modules.assetbundle": "1.0.0",
@@ -37,7 +38,6 @@
     "com.unity.modules.video": "1.0.0",
     "com.unity.modules.vr": "1.0.0",
     "com.unity.modules.wind": "1.0.0",
-    "com.unity.modules.xr": "1.0.0",
-    "de.nsynk.unity.glue": "file:../../de.nsynk.unity.glue"
+    "com.unity.modules.xr": "1.0.0"
   }
 }
