--- a/de.nsynk.unity.glue/Internal/Ceras/Ceras.asmdef
+++ b/de.nsynk.unity.glue/Internal/Ceras/Ceras.asmdef
@@ -1,11 +1,6 @@
 {
-    "name": "NSYNK.unity.Glue",
-    "references": [
-        "Unity.RenderPipelines.Core.Runtime",
-        "Unity.RenderPipelines.HighDefinition.Runtime",
-        "Ceras"
-    ],
-    "optionalUnityReferences": [],
+    "name": "Ceras",
+    "references": [],
     "includePlatforms": [],
     "excludePlatforms": [],
     "allowUnsafeCode": true,
